# kbot_installer

./: .coveragerc  .gitattributes  .gitignore  .pylintrc  .pytest.ini  CLAUDE.md  Makefile  README.md  bundle.py  bundle.sh  deps.py  description.xml  gitpassword.py  kbot.py  logging.conf  nexus.py  product.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  setup_workarea.py  setup_workarea.sh  tox.ini
.claude/commands/: check.md  clean.md  format.md  lint-fix.md  lint.md  test-cov.md  test.md  tox.md
.cursor/rules/conventions/: docstring-google-format.mdc  naming-conventions.mdc  python-absolute-imports.mdc
.cursor/rules/tests/: pytest-conventions.mdc  tdd-methodology.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: linter.yaml  sync-pr-to-jira.yaml  test-build-release.yaml  test_build_release.yaml  uv-lock-update.yaml
conf/: default_providers_config.json  rules.json
core/python/: env.example  examples.py  simple_examples.py
core/python/auth/: __init__.py  apikey_auth.py  auth_mixin.py  base.py  basic_auth.py  bearer_auth.py  factory.py  login_refresh_auth.py  ssh_auth.py
core/python/auth/http_auth/: __init__.py  basic_http_auth.py  bearer_http_auth.py  factory.py
core/python/auth/pygit_authentication/: __init__.py  factory.py  key_pair_pygit_authentication.py  remote_callback_mixin.py  user_pass_pygit_authentication.py
core/python/auth/tests/: test_apikey_auth.py  test_auth_mixin.py  test_base.py  test_basic_auth.py  test_bearer_auth.py  test_factory.py  test_login_refresh_auth.py  test_ssh_auth.py
core/python/backend/: azure_backend.py  base.py  factory.py  oci_backend.py  s3_backend.py
core/python/backend/tests/: test_oci_backend.py
core/python/cli/: __main__.py  commands.py
core/python/cli/tests/: test___main__.py  test_commands.py
core/python/credentials/: __init__.py  azure_client_secret_credentials.py  azure_storage_credentials.py  base.py  bitbucket_credentials.py  factory.py  github_credentials.py  nexus_credentials.py  oci_credentials.py  s3_credentials.py  ssh_credentials.py
core/python/credentials/tests/: test_azure_client_secret_credentials.py  test_azure_storage_credentials.py  test_bitbucket_credentials.py  test_github_credentials.py  test_oci_credentials.py  test_ssh_credentials.py
core/python/database/: base.py  external_db.py  factory.py  internal_db.py  postgres_cluster.py  utils.py
core/python/database/tests/: test_base.py  test_external_db.py  test_factory.py  test_internal_db.py  test_postgres_cluster.py  test_utils.py
core/python/downloadable/: base.py  bundle_downloadable.py  factory.py  product_downloadable.py
core/python/downloadable/tests/: test_bundle_downloadable.py  test_factory.py  test_product_downloadable.py
core/python/errors/: __init__.py
core/python/errors/tests/: test___init__.py
core/python/git/: __init__.py  bootstrap.py  io.py  models.py
core/python/git/provider/: __init__.py  base.py  bitbucket_provider.py  config.py  credential_manager.py  errors.py  examples.py  factory.py  git_mixin.py  github_provider.py  selector_provider.py  simple_examples.py  storage_provider.py  utils.py
core/python/git/tests/: test_bootstrap.py  test_io.py
core/python/git/versioner/: __init__.py  base.py  dulwich_versioner.py  factory.py  str_repr_mixin.py  unsupported_ops_mixin.py  utils.py
core/python/installable/: __init__.py  base.py  bundle_installable.py  dependency_graph.py  factory.py  installable_base.py  product_collection.py  product_installable.py  renderer.py  storage_pinned_product.py  workarea_installable.py
core/python/installable/tests/: test_bundle_installable.py  test_collection.py  test_dependency_graph.py  test_product.py  test_product_collection.py  test_product_install.py  test_renderer.py  test_workarea_installable.py
core/python/installable/updater/: __init__.py  base.py  factory.py  interactive_updater.py  repair_updater.py  (+2 more)
core/python/installer_support/: __init__.py  env_loader.py  installation_table.py  installer_service.py  installer_utils.py  logging_config.py
core/python/installer_tests/: __init__.py  test_installation_table.py  test_installer_service.py  test_utils.py
core/python/interactivity/: __init__.py  admin_prompter.py  database_prompter.py  http_prompter.py  license_prompter.py  redis_prompter.py
core/python/provider/: __init__.py  bitbucket_provider.py  config.py  credential_manager.py  examples.py  factory.py  git_mixin.py  github_provider.py  nexus_provider.py  selector_provider.py  simple_examples.py
core/python/publisher/: __init__.py  base.py  bundle_publisher.py  factory.py
core/python/service/: __init__.py  checksum.py  errors.py  nexus_file.py  nexus_files.py  nexus_service.py
core/python/setup/: __init__.py  base.py  database_setup.py  docs_setup.py
core/python/storage/: azure_storage.py  base.py  download_utils.py  factory.py  nexus_storage.py  oci_storage.py  s3_storage.py
core/python/tools/: oci_bucket_diag.py  tries.py
core/python/utils/: Logger.py  __init__.py  as_list.py  async_api_client.py  bundle.py  deps.py  git_utils.py  gitpassword.py  nexus.py  path_utils.py  product.py  pyproject.py  setup_workarea.py  snake_pascal.py  streaming_reader.py  utils_for_unit_tests.py  version.py  work_in_progress.py
core/python/versioner/: __init__.py  author.py  base.py  dulwich_versioner.py  factory.py  gitpython_versioner.py  nexus_versioner.py  pygit_versioner.py  str_repr_mixin.py  unsupported_ops_mixin.py  versioner_base.py
core/python/workarea/: rule_action.py  utils.py  workarea.py  workarea_rule.py
core/python/writer/: __init__.py  base.py  factory.py  text_writer.py  toml_writer.py  xml_writer.py
scripts/: setup-merge-driver.sh
src/kbot_installer/: __init__.py  __main__.py  env.example  examples.py  simple_examples.py
src/kbot_installer/cli/: __init__.py  commands.py
src/kbot_installer/core/: __init__.py  installation_table.py  installer_service.py  logging_config.py  utils.py
src/kbot_installer/tests/: __init__.py
tests/: __init__.py
tools/merge-driver/: README.md  pyproject.toml
(+269 files in other folders)
